--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="SkillUP 教材初級">
     <meta property="og:description" content="SkillUP 教材初級編です。デザインカンプから初めてコーディングするには最適な教材です。しかも無料です。">
-    <meta property="og:image" content="https://melodic-tulumba-d5e327.netlify.app/img/ogp.png">
+    <meta property="og:image" content="https://gentle-cuchufli-5dd982.netlify.app/img/ogp.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="SkillUP 教材初級">
     <meta property="twitter:description" content="SkillUP 教材初級編です。デザインカンプから初めてコーディングするには最適な教材です。しかも無料です。">
-    <meta property="twitter:image" content="https://melodic-tulumba-d5e327.netlify.app/img/ogp.png">
+    <meta property="twitter:image" content="https://gentle-cuchufli-5dd982.netlify.app/img/ogp.png">
 </head>
 
 <body>
     <header class="l-header p-header">
-        <div class="p-header__inner">
+        <div class="l-inner">
             <div class="p-header__content">
-                <div class="p-header__logo"><a href="/">&nbsp;Portfolio</a></div><!-- /.p-header__logo -->
-                <div class="p-header__nav" id="js-nav">
-                    <ul class="p-header__nav-items">
-                        <li class="p-header__nav-item"><a href="#service" class="js-link">SERVICE</a></li><!-- /.p-header__nav-item -->
-                        <li class="p-header__nav-item"><a href="#works" class="js-link">WORKS</a></li><!-- /.p-header__nav-item -->
-                    </ul><!-- /.p-header__nav-items -->
-                </div><!-- /.p-header__nav -->
+                <div class="p-header__logo"><a href="/">&nbsp;portfolio</a></div>
+                <div class="p-header__nav p-nav" id="js-nav">
+                    <ul class="p-nav__items">
+                        <li class="p-nav__item"><a href="#service" class="js-link">service</a></li>
+                        <li class="p-nav__item"><a href="#works" class="js-link">works</a></li>
+                    </ul>
+                </div>
                 <div class="c-openbtn p-header__openbtn" id="js-openbtn"><span></span><span></span><span></span></div>
-            </div><!-- /.p-header__content -->
-        </div><!-- /.p-header__inner -->
-    </header><!-- /.l-header.p-header -->
+            </div>
+        </div>
+    </header>
 
     <main class="l-main">
         <!-- First View -->
@@ -51,102 +51,113 @@
 
         <!-- Service -->
         <section class="p-service" id="service">
-            <div class="p-service__inner">
+            <div class="l-inner">
                 <h2 class="c-section-heading p-service__heading">Service<span>事業内容</span></h2><!-- /.c-section-heading p-service__heading -->
-                <div class="p-service__cards">
+                <div class="p-service__cards c-cards1">
+
                     <!-- Item 1 -->
-                    <div class="p-service__card">
-                        <div class="p-service__image">
+                    <div class="c-cards1__item c-card1">
+                        <div class="c-card1__image">
                             <img src="img/service1.png" alt="Webサイト制作のイメージ画像です" width="400" height="400" loading="lazy">
-                        </div><!-- /.p-service__image -->
-                        <div class="p-service__content">
-                            <h3 class="p-service__name">Webサイト制作</h3><!-- /.p-service__name -->
-                            <p class="p-service__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-service__description -->
-                        </div><!-- /.p-service__content -->
-                    </div><!-- /.p-service__card -->
+                        </div>
+                        <div class="c-card1__contents">
+                            <h3 class="c-card1__heading">Webサイト制作</h3>
+                            <p class="c-card1__text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        </div>
+                    </div>
+                    
                     <!-- Item 2 -->
-                    <div class="p-service__card">
-                        <div class="p-service__image">
+                    <div class="c-cards1__item c-card1">
+                        <div class="c-card1__image">
                             <img src="img/service2.png" alt="運用保守のイメージ画像です" width="400" height="400" loading="lazy">
-                        </div><!-- /.p-service__image -->
-                        <div class="p-service__content">
-                            <h3 class="p-service__name">運用保守</h3><!-- /.p-service__name -->
-                            <p class="p-service__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-service__description -->
-                        </div><!-- /.p-service__content -->
-                    </div><!-- /.p-service__card -->
+                        </div>
+                        <div class="c-card1__contents">
+                            <h3 class="c-card1__heading">運用保守</h3>
+                            <p class="c-card1__text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        </div>
+                    </div>
+
                     <!-- Item 3 -->
-                    <div class="p-service__card">
-                        <div class="p-service__image">
+                    <div class="c-cards1__item c-card1">
+                        <div class="c-card1__image">
                             <img src="img/service3.png" alt="コーディング、WordPress構築代行のイメージ画像です" width="400" height="400" loading="lazy">
-                        </div><!-- /.p-service__image -->
-                        <div class="p-service__content">
-                            <h3 class="p-service__name p-service__name--fullbleed">コーディング、<br class="u-sp-only">WordPress構築代行
-                            </h3><!-- /.p-service__name -->
-                            <p class="p-service__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-service__description -->
-                        </div><!-- /.p-service__content -->
-                    </div><!-- /.p-service__card -->
-                </div><!-- /.p-service__cards -->
+                        </div>
+                        <div class="c-card1__contents">
+                            <h3 class="c-card1__heading c-card1__heading--fullbleed">コーディング、<br class="u-sp-only">WordPress構築代行
+                            </h3>
+                            <p class="c-card1__text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
+                        </div>
+                    </div>
+
+                </div>
 
                 <!-- ボタン -->
                 <div class="p-service__more">
                     <button class="c-more-button p-service__more-button">
                         <a href="#">more</a>
-                    </button><!-- /.p-service__more-button -->
-                </div><!-- /.p-service__more -->
-            </div><!-- /.p-service__inner -->
-        </section><!-- /.p-service -->
+                    </button>
+                </div>
+            </div>
+        </section>
 
         <!-- Works -->
         <section class="p-works" id="works">
-            <div class="p-works__inner">
+            <div class="l-inner">
                 <h2 class="c-section-heading p-works__heading">Works<span>制作実績</span></h2><!-- /.c-section-heading p-works__heading -->
-                <div class="p-works__cards">
-                    <div class="p-works__card">
-                        <div class="p-works__image">
+                <div class="p-works__cards c-cards2">
+
+                    <!-- Item1 -->
+                    <div class="c-cards2__item c-card2">
+                        <div class="c-card2__image">
                             <img src="img/works1.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
-                        </div><!-- /.p-works__image -->
-                        <div class="p-works__content">
-                            <h3 class="p-works__name p-works__name--fullbleed">タイトル
-                            </h3><!-- /.p-works__name -->
-                            <p class="p-works__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
-                        </div><!-- /.p-works__content -->
-                    </div><!-- /.p-works__card -->
-                    <div class="p-works__card">
-                        <div class="p-works__image">
+                        </div>
+                        <div class="c-card2__content">
+                            <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
+                            </h3>
+                            <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
+                        </div>
+                    </div>
+
+                    <!-- Item2 -->
+                    <div class="c-cards2__item c-card2">
+                        <div class="c-card2__image">
                             <img src="img/works2.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
-                        </div><!-- /.p-works__image -->
-                        <div class="p-works__content">
-                            <h3 class="p-works__name p-works__name--fullbleed">タイトル
-                            </h3><!-- /.p-works__name -->
-                            <p class="p-works__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
-                        </div><!-- /.p-works__content -->
-                    </div><!-- /.p-works__card -->
-                    <div class="p-works__card">
-                        <div class="p-works__image">
+                        </div>
+                        <div class="c-card2__content">
+                            <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
+                            </h3>
+                            <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
+                        </div>
+                    </div>
+
+                    <!-- Item3 -->
+                    <div class="c-cards2__item c-card2">
+                        <div class="c-card2__image">
                             <img src="img/works3.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
-                        </div><!-- /.p-works__image -->
-                        <div class="p-works__content">
-                            <h3 class="p-works__name p-works__name--fullbleed">タイトル
-                            </h3><!-- /.p-works__name -->
-                            <p class="p-works__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
-                        </div><!-- /.p-works__content -->
-                    </div><!-- /.p-works__card -->
-                </div><!-- /.p-works__cards -->
+                        </div>
+                        <div class="c-card2__content">
+                            <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
+                            </h3>
+                            <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
+                        </div>
+                    </div>
+
+                </div>
 
                 <!-- ボタン -->
                 <div class="p-works__more">
                     <button class="c-more-button">
                         <a href="#">more</a>
-                    </button><!-- /.p-works__more-button -->
-                </div><!-- /.p-works__more -->
-            </div><!-- /.p-works__inner -->
+                    </button>
+                </div>
+            </div>
 
-        </section><!-- /.p-works -->
-    </main><!-- /.l-main -->
+        </section>
+    </main>
 
     <footer class="l-footer p-footer">
         <small>&copy; Skill UP</small>
-    </footer><!-- /.l-footer.p-footer -->
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
