表示が不正だったのを修正

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- First View -->
         <section class="p-fv">
             <h2 class="p-fv__heading">Skill UP</h2>
-        </section><!-- /.p-fv -->
+        </section>
 
         <!-- Service -->
         <section class="p-service" id="service">
