css版の変更を取り込み

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
     <main class="l-main">
         <!-- First View -->
-        <section class="p-fv">
+        <section class="p-fv l-fv">
             <h2 class="p-fv__heading">Skill UP</h2>
-        </section>
+        </section><!-- /.p-fv -->
 
         <!-- Service -->
         <section class="p-service" id="service">
@@ -65,7 +65,7 @@
                             <p class="c-card1__text">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p>
                         </div>
                     </div>
-                    
+
                     <!-- Item 2 -->
                     <div class="c-cards1__item c-card1">
                         <div class="c-card1__image">
@@ -93,9 +93,7 @@
 
                 <!-- ボタン -->
                 <div class="p-service__more">
-                    <button class="c-more-button p-service__more-button">
-                        <a href="#">more</a>
-                    </button>
+                    <a href="#" class="c-more-button p-service__more-button">more</a>
                 </div>
             </div>
         </section>
@@ -107,48 +105,52 @@
                 <div class="p-works__cards c-cards2">
 
                     <!-- Item1 -->
-                    <div class="c-cards2__item c-card2">
-                        <div class="c-card2__image">
-                            <img src="img/works1.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
+                    <a href="#" class="c-cards2__item">
+                        <div class="c-card2">
+                            <div class="c-card2__image">
+                                <img src="img/works1.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
+                            </div>
+                            <div class="c-card2__content">
+                                <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
+                                </h3>
+                                <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
+                            </div>
                         </div>
-                        <div class="c-card2__content">
-                            <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
-                            </h3>
-                            <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
-                        </div>
-                    </div>
+                    </a>
 
                     <!-- Item2 -->
-                    <div class="c-cards2__item c-card2">
-                        <div class="c-card2__image">
-                            <img src="img/works2.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
+                    <a href="#" class="c-cards2__item">
+                        <div class="c-card2">
+                            <div class="c-card2__image">
+                                <img src="img/works2.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
+                            </div>
+                            <div class="c-card2__content">
+                                <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
+                                </h3>
+                                <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
+                            </div>
                         </div>
-                        <div class="c-card2__content">
-                            <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
-                            </h3>
-                            <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
-                        </div>
-                    </div>
+                    </a>
 
                     <!-- Item3 -->
-                    <div class="c-cards2__item c-card2">
-                        <div class="c-card2__image">
-                            <img src="img/works3.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
+                    <a href="#" class="c-cards2__item">
+                        <div class="c-card2">
+                            <div class="c-card2__image">
+                                <img src="img/works3.png" alt="制作実績のイメージ画像です" width="400" height="400" loading="lazy">
+                            </div>
+                            <div class="c-card2__content">
+                                <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
+                                </h3>
+                                <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
+                            </div>
                         </div>
-                        <div class="c-card2__content">
-                            <h3 class="c-card2__heading c-card2__heading--fullbleed">タイトル
-                            </h3>
-                            <p class="c-card2__description">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</p><!-- /.p-works__description -->
-                        </div>
-                    </div>
+                    </a>
 
                 </div>
 
                 <!-- ボタン -->
                 <div class="p-works__more">
-                    <button class="c-more-button">
-                        <a href="#">more</a>
-                    </button>
+                    <a href="#" class="c-more-button p-works__more-button">more</a>
                 </div>
             </div>
 
